# file-type

./: CMakeLists.txt  README.md  extensions.json  file_type.hpp  main.cpp
.github/workflows/: c-cpp.yml
